# rookie-rust-editor

./: Cargo.toml  README.md
src/: document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
src/highlightkeys/: rust.json
