[package]
name = "text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1" # the library for interacting with terminal
unicode-segmentation = "1.8.0" # the library for manipulating unicode
serde_json = "1.0.103" # the library for serializing and deserializing json